--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -1,7 +1,13 @@
+/*users*/
 
 
-
-
+.indicator {
+    display: inline-flex;
+    align-items: center;
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-size: 16px;
+}
 
 
 
@@ -55,12 +61,6 @@ body {
 
 /*----------------------------------------------home styles-----------------------------*/
 
-.dashboard-container {
-  padding: 20px;
-  background-color: #f0f2f5; /* Softer background color */
-  min-height: 100vh;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Modern, clean font */
-}
 
 /* Styles for the total counts cards */
 .stat-row {
@@ -213,6 +213,7 @@ canvas {
     align-self: flex-start;
   }
 }
+
 
 
 /*-----------------------------------------students styles----------------------------*/
